--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
-<html lang="p4">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale">
+    <title>p4</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kenia&display=swap" rel="stylesheet">
 </head>
 <style>
+    @font-face {
+    font-family: 'BubbleGum';
+    src: url('fonts/BubbleGum.woff2') format('woff2'),
+        url('fonts/BubbleGum.woff') format('woff'),
+        url('fonts/BubbleGum.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    }
+    @font-face {
+    font-family: 'Variator';
+    src: url('fonts/VariatorOne.woff2') format('woff2'),
+        url('fonts/VariatorOne.woff') format('woff'),
+        url('fonts/VariatorOne.ttf') format('truetype'),
+        url('fonts/VariatorOne.svg#VariatorOne') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    }
     *{
         margin: 0;
         padding: 0;
@@ -21,13 +47,37 @@
         height: 50vh;
         width: 100%;
     }
+    h1 {
+        font-size: 8em;
+        font-family: Kenia;
+    }
+    h1:hover{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    h2 {
+        font-size: 8em;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    h2:hover{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
     h3{
        justify-content: end;
        align-self: flex-start;
+       font-family: Bubblegum;
+       font-size: 5em;
+    }
+    h3:hover{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     h4{
         justify-content: center;
         align-self: flex-end;
+        font-family: Variator;
+        font-size: 7em;
+    }
+    h4:hover{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 </style>
 <body>
